# mini_c

./: .gitignore  CMakeLists.txt  LICENSE  README.md  codegen.c  main.c  makefile  minic.h  parse.c  test.sh  tokenize.c  type.c
